src/test/deca/context/invalid/decl_field_02.deca
// Description:
//    Teste la déclaration d'un champs de type void.
//
// Resultats:
//    Ligne 11: Déclaration de Field de type void impossible
//
// Historique:
//    cree le 20/01/2023

class A{
    void  a;
}